<resources>
    <string name="app_name">InfograceTask</string>
    <!-- Layers -->
    <string name="sloy_delyan">Слой делян</string>
    <string name="sloy_transparency">Прозрачность: %d%%</string>
    <string name="sloy_synch_date">Синхр: %s</string>
    <string name="sloy_elements">Эл-ов: %d</string>
    <string name="sloy_zoom">Зум: %d - %d</string>
    <string name="sloy_signal_o_lesoizmenenijax">Сигнал о лесоизменениях, тестовая выборка с ув-ным шагом</string>
    <string name="sloy_firewall">Преграды для прохождения огня</string>
    <string name="sloy_cloudy_mask">Маска облачности от %s</string>

    <!--    Common Layers-->
    <string name="common_layers">Общие слои</string>
    <string name="common_folder_with_layers">Папка со слоями</string>

    <!--    TabNames-->
    <string name="tab_layer">Слои</string>
    <string name="tab_podlozhki">Подложки</string>
    <string name="tab_missions">Миссии</string>
    <string name="tab_count_visible_elements">Невидимых элементов: %d</string>

    <!--    search dialog-->
    <string name="dialog_title">Начни что-то искать</string>
    <string name="dialog_search">Мне повезёт!</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="edittext_hint"><font size="13">Лесничество / уч. лесничесвто / кв. 2 / в. 3-5</font></string>

</resources>