<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_main"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imInvisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_invisible"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/switcher"
                app:layout_constraintEnd_toStartOf="@+id/imArrow"
                app:layout_constraintStart_toEndOf="@+id/tvTitle"
                app:layout_constraintTop_toTopOf="@+id/switcher" />

            <ImageView

                android:id="@+id/imArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="22dp"
                android:src="@drawable/ic_arrow_up"
                app:layout_constraintBottom_toBottomOf="@+id/switcher"
                app:layout_constraintEnd_toStartOf="@+id/switcher"
                app:layout_constraintStart_toEndOf="@+id/imInvisible"
                app:layout_constraintTop_toTopOf="@+id/switcher" />

            <com.google.android.material.switchmaterial.SwitchMaterial

                android:id="@+id/switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showText="false" />

            <ImageView
                android:id="@+id/drag_and_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/switcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drag_list_item" />

            <ImageView

                android:id="@+id/imLineLogo"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_grometry_collection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sloy_delyan"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imLineLogo"
                app:layout_constraintEnd_toStartOf="@+id/imInvisible"
                app:layout_constraintStart_toEndOf="@+id/imLineLogo"
                app:layout_constraintTop_toTopOf="@+id/imLineLogo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layerOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/layout_for_options_background"
            android:visibility="visible">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvTransparency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="3dp"
                android:text="@string/sloy_transparency"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSynchronization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sloy_synch_date"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:progress="50"
                app:layout_constraintEnd_toEndOf="@+id/tvSynchronization"
                app:layout_constraintStart_toStartOf="@+id/tvTransparency"
                app:layout_constraintTop_toBottomOf="@+id/tvTransparency" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sloy_elements"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imTarget"
                app:layout_constraintStart_toStartOf="@+id/tvTransparency"
                app:layout_constraintTop_toTopOf="@+id/imTarget" />

            <TextView
                android:id="@+id/tvZoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/sloy_zoom"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imTarget"
                app:layout_constraintStart_toEndOf="@+id/tvAmount"
                app:layout_constraintTop_toTopOf="@+id/imTarget" />

            <ImageView
                android:id="@+id/imBorder"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginEnd="26dp"
                android:src="@drawable/ic_region_border"
                app:layout_constraintBottom_toBottomOf="@+id/imTarget"
                app:layout_constraintEnd_toStartOf="@+id/imPage"
                app:layout_constraintTop_toTopOf="@+id/imTarget" />

            <ImageView
                android:id="@+id/imPage"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginEnd="26dp"
                android:src="@drawable/ic_note"
                app:layout_constraintBottom_toBottomOf="@+id/imTarget"
                app:layout_constraintEnd_toStartOf="@+id/imTarget"
                app:layout_constraintTop_toTopOf="@+id/imTarget" />

            <ImageView
                android:id="@+id/imTarget"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/ic_center_to_gps"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvSynchronization"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>